package controlador;

import modelo.Asesoria;
import java.util.List;

public class AsesoriaController {
    
    // Método para crear una nueva solicitud de asesoría
    public void crearAsesoria(Asesoria asesoria) {
        // Implementación pendiente
    }
    
    // Método para obtener una asesoría por ID
    public Asesoria obtenerAsesoria(String id) {
        // Implementación pendiente
        return null;
    }
    
    // Método para obtener todas las asesorías
    public List<Asesoria> obtenerTodasAsesorias() {
        // Implementación pendiente
        return null;
    }
    
    // Método para obtener asesorías por usuario
    public List<Asesoria> obtenerAsesoriasPorUsuario(String usuarioUid) {
        // Implementación pendiente
        return null;
    }
    
    // Método para obtener asesorías por programador
    public List<Asesoria> obtenerAsesoriasPorProgramador(String programadorUid) {
        // Implementación pendiente
        return null;
    }
    
    // Método para aprobar una asesoría
    public void aprobarAsesoria(String asesoriaId, String respuesta) {
        // Implementación pendiente
    }
    
    // Método para rechazar una asesoría
    public void rechazarAsesoria(String asesoriaId, String respuesta) {
        // Implementación pendiente
    }
    
    // Método para actualizar el estado de una asesoría
    public void actualizarEstado(String asesoriaId, String nuevoEstado) {
        // Implementación pendiente
    }
    
    // Método para obtener asesorías pendientes
    public List<Asesoria> obtenerAsesoriasPendientes() {
        // Implementación pendiente
        return null;
    }
    
    // Método para cancelar una asesoría
    public void cancelarAsesoria(String asesoriaId) {
        // Implementación pendiente
    }
}
