package controlador;

import modelo.Proyecto;
import java.util.List;

public class ProyectoController {
    
    // Método para crear un nuevo proyecto
    public void crearProyecto(Proyecto proyecto) {
        // Implementación pendiente
    }
    
    // Método para obtener un proyecto por ID
    public Proyecto obtenerProyecto(String id) {
        // Implementación pendiente
        return null;
    }
    
    // Método para obtener todos los proyectos
    public List<Proyecto> obtenerTodosProyectos() {
        // Implementación pendiente
        return null;
    }
    
    // Método para actualizar un proyecto
    public void actualizarProyecto(Proyecto proyecto) {
        // Implementación pendiente
    }
    
    // Método para eliminar un proyecto
    public void eliminarProyecto(String id) {
        // Implementación pendiente
    }
    
    // Método para filtrar proyectos por tipo
    public List<Proyecto> filtrarPorTipo(String tipo) {
        // Implementación pendiente
        return null;
    }
    
    // Método para buscar proyectos por tecnología
    public List<Proyecto> buscarPorTecnologia(String tecnologia) {
        // Implementación pendiente
        return null;
    }
    
    // Método para agregar imágenes al proyecto
    public void agregarImagenes(String proyectoId, List<String> imagenes) {
        // Implementación pendiente
    }
}
