package controlador;

import modelo.Usuario;
import java.util.List;

public class UsuarioController {
    
    // Método para crear un nuevo usuario
    public void crearUsuario(Usuario usuario) {
        // Implementación pendiente
    }
    
    // Método para obtener un usuario por ID
    public Usuario obtenerUsuario(String uid) {
        // Implementación pendiente
        return null;
    }
    
    // Método para obtener todos los usuarios
    public List<Usuario> obtenerTodosLosUsuarios() {
        // Implementación pendiente
        return null;
    }
    
    // Método para actualizar un usuario
    public void actualizarUsuario(Usuario usuario) {
        // Implementación pendiente
    }
    
    // Método para eliminar un usuario
    public void eliminarUsuario(String uid) {
        // Implementación pendiente
    }
    
    // Método para validar credenciales de usuario
    public boolean validarCredenciales(String email, String password) {
        // Implementación pendiente
        return false;
    }
    
    // Método para cambiar el rol de un usuario
    public void cambiarRol(String uid, String nuevoRol) {
        // Implementación pendiente
    }
}
